kubernates/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "ingress"
  namespace: "default"
spec:
  rules:
  - http:
      paths:
      - path: "/"
        backend:
          service:
            name: "web-app-service"
            port:
              number: 80
        pathType: "ImplementationSpecific"
status:
  loadBalancer: {}
